# bisectionMethod

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: bsc_method.hpp.4BDDA0BABAAD0AF4.idx  core.cpp.DD6E708BE1FBDA4D.idx  core.hpp.3A727AD626B4C30C.idx  exprtk.hpp.A81B24DED09D866C.idx  main.cpp.7E6F5D7E754D2ABE.idx  roots.cpp.E03A2EDEF74D3765.idx  roots.hpp.D9BC1167E0FFDE6E.idx
include/: core.hpp  roots.hpp
src/: core.cpp  main.cpp  roots.cpp
